
//The following bugs have been fixed:

//* ws-buglink:5000[]
//* ws-buglink:6000[Wireshark bug]
//* cve-idlink:2014-2486[]
//* Wireshark keeps leaving voicemails advertising timeshare condominiums in Fresno. (ws-buglink:0000[])

//_Non-empty section placeholder._

=== New and Updated Features

The following features are new (or have been significantly updated)
since version 2.1.1:

The following features are new (or have been significantly updated)
since version 2.1.0:

* Added -d option for Decode As support in Wireshark (mimics TShark
  functionality)
* The Qt UI, GTK+ UI, and TShark can now export packets as JSON.
  TShark can additionally export packets as Elasticsearch-compatible
  JSON.
* The Qt UI now supports the -j, -J, and -l flags. The -m flag is now
  deprecated.
* The Conversations and Endpoints dialogs are more responsive when
  viewing large numbers of items.
* The RTP player now allows up to 30 minutes of silence frames.
* Packet bytes can now be displayed as EBCDIC.
* The Qt UI loads captures faster on Windows.
* proto_tree_add_checksum was added as an API.  This attempts to
  standardize how checksums are reported and filtered for within
  *Shark.  There are no more individual "good" and "bad" filter
  fields, protocols now have a "checksum.status" field that records
  "Good", "Bad" and "Unverified" (neither good or bad). Color filters
  provided with Wireshark have been adjusted to the new display filter
  names, but custom ones may need to be updated.

The following features are new (or have been significantly updated)
since version 2.0.0:

* The intelligent scroll bar now sits to the left of a normal scroll bar and
  provides a clickable map of nearby packets.
* You can now switch between between Capture and File Format dissection of
the current capture file via the View menu in the Qt GUI.
* You can now show selected packet bytes as ASCII, HTML, Image, ISO 8859-1, Raw, UTF-8,
a C array, or YAML.