@@ -936,26 +936,6 @@ libtool: $(LIBTOOL_DEPS)
 	$(SHELL) ./config.status --recheck
 
 
-# Used by patch-bzip2
-# Trim off any extra version information and find the previous micro release.
-BASE_VERSION=`echo "$(VERSION)" | awk -F. '{$$3 = $$3 + 0 ; printf("%d.%d.%d"), $$1, $$2, $$3}'`
-PREV_VERSION=`echo "$(VERSION)" | awk -F. '{$$3 = $$3 + 0 ; if ($$3 > 0) $$3-- ; printf("%d.%d.%d"), $$1, $$2, $$3}'`
-PREV_DIR="wireshark-$(PREV_VERSION)"
-PREV_FILE="$(PREV_DIR).tar.bz2"
-PREV_URL="https://www.wireshark.org/download/src/all-versions/$(PREV_FILE)"
-
-patch-bzip2: distdir
-	if test x$(BASE_VERSION) != x$(PREV_VERSION) ; then \
-		curl --time-cond $(PREV_FILE) --location --output $(PREV_FILE) $(PREV_URL) && \
-		tar -xjf $(PREV_FILE) && \
-		diff -urN $(PREV_DIR) $(distdir) | bzip2 > patch-wireshark-$(PREV_VERSION)-to-$(VERSION).bz2 && \
-		echo "Created patch-bzip2" ; \
-		rm -rf "$(PREV_FILE)" "$(PREV_DIR)" ; \
-	else \
-		echo "This appears to be the first micro version ($(PREV_VERSION)). Skipping." ; \
-	fi
-	$(am__remove_distdir)
-
 #
 # Install icons and other desktop files for (for use with GNOME, KDE, or
 # any other freedesktop.org-compliant desktops).
@@ -1118,12 +1098,12 @@ rpm-package: dist
 	@cd $(rpm_topdir) && \
 	  mkdir -p BUILD RPMS SOURCES SRPMS && \
 	  cd SOURCES && \
-	  ln -sf ../../../$(distdir).tar.bz2 && \
+	  ln -sf ../../../$(distdir).tar.xz && \
 	  cd .. && \
 	  $(RPMBUILD) --define "_topdir `cd . && pwd`" --define "_prefix $(prefix)" \
 		@RPMBUILD_WITH_ARGS@ --clean -ba SPECS/wireshark.spec && \
 	  echo "Package successfully built in `pwd`/RPMS." ; \
-	  rm -f SOURCES/$(distdir).tar.bz2 ../../$(distdir).tar.bz2
+	  rm -f SOURCES/$(distdir).tar.xz ../../$(distdir).tar.xz
 else
 rpm-package:
 	@echo "RPM executable not available." ; \
