@@ -37,9 +37,9 @@ Version:	@RPM_VERSION@
 Release:	1
 License:	GPLv2+
 Group:		Applications/Internet
-Source:		https://wireshark.org/download/src/%{name}-%{package_version}.tar.bz2
+Source:		https://wireshark.org/download/src/%{name}-%{package_version}.tar.xz
 # Or this URL for automated builds:
-#Source:	https://wireshark.org/download/automated/src/%{name}-%{package_version}.tar.bz2
+#Source:	https://wireshark.org/download/automated/src/%{name}-%{package_version}.tar.xz
 URL:		https://www.wireshark.org/
 Packager:	Gerald Combs <gerald[AT]wireshark.org>
 # Some distributions create a wireshark-devel package; get rid of it
